# HG2Vec-Multi-Lang

./: .gitignore  README.md  TODO  pyproject.toml  requirements.txt
data/input/: init_vocabulary_en.txt  sample.jsonl  stopwords_fr.txt  test_syn_ant_fr.txt  test_words_fr-definitions-fr.txt
data/input/eval/fr/: fr-simlex.txt  fr-ws353-rel.txt
data/output/definitions/: test_words_fr-definitions-fr.txt
hg2vec_fr/: __init__.py
hg2vec_multi/: __init__.py
hg2vec_multi/data/input/: init_words_fr.txt  stopwords_fr.txt  test_words_fr.txt
hg2vec_multi/tools/downloaders/: __init__.py  definition_batch_processor.py  definition_fetcher.py  dictionary_config.py
hg2vec_multi/tools/downloaders/dictionaries/: __init__.py  dictionary_api.py  factory.py
hg2vec_multi/tools/downloaders/dictionaries/cambridge/: __init__.py  cambridge_api.py  config.py
hg2vec_multi/tools/downloaders/dictionaries/collins/: __init__.py  collins_api.py  config.py
hg2vec_multi/tools/downloaders/dictionaries/dictionary_com/: __init__.py  config.py  dictionary_com_api.py
hg2vec_multi/tools/downloaders/dictionaries/oxford/: __init__.py  config.py  oxford_api.py
tools/: word_similarity.py
tools/downloaders/: README.md  clean_definitions.py  download_definitions.py  downloader.py  extract_vocabulary.py
tools/downloaders/dictionaries/: README.md  __init__.py  base.py  cambridge.py  collins.py  dictionary_com.py  larousse.py  oxford.py  robert.py
tools/pair_generators/: README.md  generate_syn_ant_pairs.py  generate_weak_strong_pairs.py
tools/processors/: README.md
tools/processors/preprocessor/: data_prepossessing.sh  edge_generator.py  edge_generator_dataset.py
tools/processors/vector_processor/: README.md  evaluate.py  main.py  similarity.py  trainer.sh
(+3 files in other folders)
