[project]
name = "hg2vec-multilang"
version = "0.1.0"
description = "hg2vec multi language based on HG2Vec and Dict2Vec"
requires-python = ">=3.8"
authors = [
    "Nicolas Vergoz <5927350+nicolasvergoz@users.noreply.github.com>",
    "Julien Tissier <30314448+tca19@users.noreply.github.com>",
    "Qitong-Wang <42950427+Qitong-Wang@users.noreply.github.com>"
]