[project]
name = "hg2vec-multilang"
version = "0.1.0"
description = "hg2vec multi language based on HG2Vec and Dict2Vec"
requires-python = ">=3.8"
authors = [
    "Nicolas Vergoz <5927350+nicolasvergoz@users.noreply.github.com>",
    "Julien Tissier <30314448+tca19@users.noreply.github.com>",
    "Qitong-Wang <42950427+Qitong-Wang@users.noreply.github.com>"
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=1.10.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "einops>=0.4.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"